z-index and multiple meetings fix

--- a/src/app/component/calendar/calendar.component.css
+++ b/src/app/component/calendar/calendar.component.css
@@ -1,7 +1,7 @@
 .mat-toolbar {
   position: sticky;
   top: 0;
-  z-index: 5;
+  z-index: 2;
 }
 
 .nav {
@@ -42,14 +42,21 @@
   outline:1px solid lightgray;
 }
 
-.meeting {
-  position: absolute;
-  border-radius: 15px;
+.meeting-container{
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+}
+
+.meeting {
+  border-radius: 15px;
   background: plum;
   display: flex;
+  flex-direction: row;
   align-content: center;
   place-content: center;
+  z-index: 1;
 }
 
 .today {
